--- a/Front Page.html
+++ b/Front Page.html
@@ -8,52 +8,46 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div id="header" class="text-center">
-            <h1>Dino Menjelajah Nusantara</h1> <!--Judul game sementara-->
-            <img src="images/logo.png" alt="Logo" class="img-fluid">
+  <div class="container">
+    <div id="header" class="text-center mt-3 row justify-content-center">
+      <div class = "col-lg-7 text center">
+        <h1>Dino Menjelajah Nusantara</h1> <!--Judul game sementara-->
+        <img src="images/logo.png" alt="Logo" class="img-fluid">
+        <hr>            
+        <h1>Choose your Charachter</h1>
+        <div id="carouselCharacter" class="carousel slide text-center justify-content-center align-items-center">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="Assets/undertale-frisk.gif" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="Assets/undertale-frisk (1).gif" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="Assets/undertale-frisk back.gif" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="Assets/undertale-frisk left.gif" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <div class = "pe-0 ps-0">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselCharacter" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+          </div>
+          <div class = "pe-0 ps-0">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselCharacter" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
-        <div id="content" class="mt-3 border-top">
-            <div class="row mt-3">
-                <div class="col-12 text-center">
-                    <h1>Choose your character</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div id="carouselCharacter" class="carousel slide">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselCharacter" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselCharacter" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-12">
-                    <input type="text" id="yourName" class="form-control text-center" placeholder="Enter your name here">
-                </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-12 text-center">
-                    <button type="button" class="btn btn-primary">Choose</button>
-                </div>
-            </div>
-        </div>
+        <input type="text" id="yourName" class="form-control text-center mt-3" placeholder="Enter your name here">
+        <button type="button" class="btn btn-primary mt-3">Choose</button>
+      </div>
     </div>
+  </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
